feat(application): finished setup pre-ngrx, add endpoints

--- a/src/app/taxi-list-item/taxi-list-item.component.html
+++ b/src/app/taxi-list-item/taxi-list-item.component.html
@@ -1,6 +1,6 @@
 <div
   class="
-  cursor-pointer
+    cursor-pointer
     border
     flex
     justify-between
@@ -37,11 +37,7 @@
           d="M15 11a3 3 0 11-6 0 3 3 0 016 0z"
         />
       </svg>
-      <span
-        class="text-xl ml-4"
-
-        >{{ origin }}</span
-      >
+      <span class="text-xl ml-4">{{ origin }}</span>
     </span>
     <br />
     <span class="flex items-center text-{{ selected ? 'white' : 'gray-500' }}"
@@ -65,28 +61,11 @@
           d="M15 11a3 3 0 11-6 0 3 3 0 016 0z"
         />
       </svg>
-      <span
-        class="text-xl ml-4"
-
-        >{{ destination }}</span
-      >
+      <span class="text-xl ml-4">{{ destination }}</span>
     </span>
   </div>
   <div class="flex flex-col justify-between items-end">
-    <svg
-      xmlns="http://www.w3.org/2000/svg"
-      class="h-6 w-6 text-red-300 cursor-pointer"
-      fill="none"
-      viewBox="0 0 24 24"
-      stroke="currentColor"
-    >
-      <path
-        stroke-linecap="round"
-        stroke-linejoin="round"
-        stroke-width="2"
-        d="M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z"
-      />
-    </svg>
+    <ng-content></ng-content>
     <span class="font-semibold text-{{ selected ? 'white' : 'indigo-600' }}">
       {{ tarrif }} MAD</span
     >
